On iOS, we never want to make scrollbar layers https://bugs.webkit.org/show_bug.cgi?id=127024 <rdar://problem/15745768>

Reviewed by Dean Jackson.

On platforms that delegate scrolling, don't try to make layers
for scrollbars.

This fixes a crash in RenderLayerCompositor::updateOverflowControlsLayers()
where m_overflowControlsHostLayer is null.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::shouldCompositeOverflowControls):

Canonical link: https://commits.webkit.org/145010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162030 268f45cc-cd09-0410-ab3c-d52691b4dbfc